2011-04-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSScreen.m (-userSpaceScaleFactor):
	Temporarily fix the scale factor at 1.0 until the remaining parts
	of the high DPI patch are committed.

2011-04-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m (-compositeToPoint:fromRect:operation:fraction:):
	New simple implementation which calls
	-drawAtPoint:fromRect:operation:fraction:.
	Also respects the user space scale factor.
	* Source/NSImage.m (-guiDrawInRect:fromRect:operation:fraction):
	Remove a special case which called -compositeToPoint:..., which would
	cause an infinite loop when combined with the above change.

	Also avoid using -drawRepresentation:inRect: because -drawInRect:...
	is supposed to fill the destination rect regardless of the setting
	of -scalesWhenResized. This is a change borrowed from
	-nativeDrawInRect:...

2011-04-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenu.m (-_organizeMenu): Move some code around to avoid
	a compiler warning.

2011-04-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSViewController.m (-loadView): Retain the topLevelObjects.

2011-04-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSMenuView.m (-setWindowFrameForAttachingToRect:...):
	This method mixed user space and window base coordinates in some
	places, which I fixed.

2011-04-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSView.m (-_rebuildCoordinates): Remove assumption that
	the window content view's superview's transformation matrix is
	the identity matrix.
	* Source/NSView.m (-convertPoint..., convertRect..., convertSize...):
	Rewrite these methods to remove the same assumption as above, and
	also call -_matrixToWindow/-_matrixFromWindow rather than accessing
	ivars directly.

2011-04-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSStandardWindowDecorationView.m: Use bounds rect instead
	of frame rect when laying out the window parts (title bar, etc).

2011-04-18 Fred Kiefer <FredKiefer@gmx.de>
